--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <title>Lara Oz Therapies</title>
+    <title>Garden Retreat Spa</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="./images/icons/lara-oz-logo.svg" crossorigin="anonymous"></link>
     <script src="https://kit.fontawesome.com/c1e8c6306e.js" crossorigin="anonymous"></script>
